--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "joi": "^17.12.3",
     "lowdb": "^7.0.1"
   },
   "devDependencies": {
